cabal-version:      3.8
name:               memoir
version:            0.1.0.0
license:            BSD-3-Clause
author:             Liam Goodacre
maintainer:         goodacre.liam@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Memoir
    build-depends:
      , base ^>=4.21.0.0
      , constraints
      , ghc-prim
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
      DataKinds,
      TypeFamilies,
      TypeFamilyDependencies,
      AllowAmbiguousTypes,
      ImplicitParams,
      UndecidableInstances,
      DerivingStrategies,
      BlockArguments,
      ViewPatterns,
      UndecidableSuperClasses,
      TypeAbstractions,
      OverloadedRecordDot
